Closed Bug 277695 Opened 21 years ago Closed 21 years ago

ASSERTION: nsTDependentSubstring must wrap a non-NULL buffer

Categories

(Core :: DOM: HTML Parser, defect)

x86
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: mrbkap)

References

()

Details

Attachments

(1 file)

Loading URL in a debug build always results in this assertion: ###!!! ASSERTION: nsTDependentSubstring must wrap a non-NULL buffer: 'start && end', file nsTDependentSubstring.cpp, line 76 Break: at file nsTDependentSubstring.cpp, line 76 Adding the missing </textarea> fixes it, but it seems wrong that the invalid URL triggers an assertion, no?
Not a layout bug. The stack for the assert is: #2 0x4008d58f in nsDebug::Assertion(char const*, char const*, char const*, int) ( aStr=0x40165e80 "nsTDependentSubstring must wrap a non-NULL buffer", aExpr=0x40165e6f "start && end", aFile=0x40165e20 "/home/bzbarsky/mozilla/xlib/mozilla/xpcom/string/src/nsTDependentSubstring.cpp", aLine=76) at nsDebug.cpp:108 #3 0x4013bc13 in nsDependentSubstring::Rebind(unsigned short const*, unsigned short const*) (this=0x87f7de0, start=0x0, end=0x0) at nsTDependentSubstring.cpp:76 #4 0x41d41c46 in nsScannerSubstring::AsString() const (this=0x87f7dc8) at /home/bzbarsky/mozilla/xlib/mozilla/parser/htmlparser/src/nsScannerString.cpp:248 #5 0x41d67c54 in CTextToken::GetStringValue() (this=0x87f7db0) at /home/bzbarsky/mozilla/xlib/mozilla/parser/htmlparser/src/nsHTMLTokens.cpp:933 #6 0x41d7cfdd in CToken::AppendSourceTo(nsAString&) (this=0x87f7db0, anOutputString=@0x87f90cc) at /home/bzbarsky/mozilla/xlib/mozilla/parser/htmlparser/src/nsToken.cpp:131 #7 0x41d59e76 in CNavDTD::CollectSkippedContent(int, nsAString&, int&) (this=0x87fe5f0, aTag=97, aContent=@0x87f90cc, aLineNo=@0xbfffe88c) at /home/bzbarsky/mozilla/xlib/mozilla/parser/htmlparser/src/CNavDTD.cpp:2333 This is all mrbkap or bryner; they've been messing with this code.
Assignee: nobody → parser
Component: Layout: Form Controls → HTML: Parser
QA Contact: layout.form-controls → mrbkap
Attached patch patch v1 — — Splinter Review
Oops, this is mine.
Assignee: parser → mrbkap
Status: NEW → ASSIGNED
Attachment #170794 - Flags: superreview+
Attachment #170794 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: