bug 277695: Fix assertion on empty textareas by ensuring that mTextValue.Rebind() is called at least once. r+sr=bzbarsky